# BoostRAG

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  tasks.ps1
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_auth.py  0002_documents.py  0003_chat.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  auth.py  chat.py  documents.py
backend/app/api/v1/admin/: __init__.py  documents.py  users.py
backend/app/core/: __init__.py  config.py  db.py  deps.py  exceptions.py  logging.py  security.py  storage.py
backend/app/models/: __init__.py  base.py  chat.py  document.py  user.py
backend/app/rag/: __init__.py  engine.py
backend/app/rag/guardrails/: __init__.py  injection.py  messages.py  system_prompt.py
backend/app/rag/ingestion/: __init__.py  chunker.py  parsers.py  pipeline.py
backend/app/rag/llm/: __init__.py  embedder.py  provider.py
backend/app/rag/retrieval/: __init__.py  acl_filter.py  reranker.py  retriever.py  vector_store.py
backend/app/rag/tools/: __init__.py
backend/app/schemas/: __init__.py  auth.py  chat.py  common.py  document.py  user.py
backend/app/scripts/: __init__.py  seed_admin.py
backend/app/services/: __init__.py  auth_service.py  chat_service.py  document_service.py  user_service.py
backend/app/workers/: __init__.py  celery_app.py  db.py  ingestion_tasks.py
backend/tests/: conftest.py
backend/tests/integration/: test_account_lockout.py  test_admin_users.py  test_auth_flow.py  test_chat_stream.py  test_document_acl.py  test_document_upload.py  test_health.py
backend/tests/unit/: test_chunker.py  test_injection.py  test_jwt.py  test_parsers.py  test_password_policy.py  test_retriever_acl.py  test_system_prompt.py
frontend/: .dockerignore  .eslintrc.json  .prettierignore  Dockerfile  components.json  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
frontend/app/: globals.css  layout.tsx  not-found.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/register/: page.tsx
frontend/app/(marketing)/: layout.tsx  page.tsx
frontend/app/admin/: layout.tsx  page.tsx
frontend/app/admin/documents/: page.tsx
frontend/app/chat/: layout.tsx  page.tsx
frontend/app/chat/[sessionId]/: page.tsx
frontend/components/: providers.tsx
frontend/components/admin/: AclEditDialog.tsx  DocumentTable.tsx  DocumentUploader.tsx
frontend/components/auth/: LoginForm.tsx  RegisterForm.tsx
frontend/components/chat/: ChatPanel.tsx  ChunkDebugDrawer.tsx  CitationLink.tsx  MessageBubble.tsx  SessionSidebar.tsx  StreamingText.tsx
frontend/components/common/: Footer.tsx  Header.tsx  LanguageSwitcher.tsx
frontend/components/marketing/: CTASection.tsx  FeatureGrid.tsx  Hero.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  select.tsx  toaster.tsx
frontend/lib/api/: auth.ts  chat.ts  client.ts  documents.ts
frontend/lib/auth/: store.ts  useAuth.ts
frontend/lib/chat/: useChatStream.ts
frontend/lib/i18n/: config.ts  request.ts
frontend/lib/types/: api.ts
frontend/lib/utils/: cn.ts
frontend/messages/: en.json  vi.json
frontend/test/: cn.test.ts
