[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boostrag-backend"
version = "0.1.0"
description = "BoostRAG — enterprise RAG backend (FastAPI + SQLAlchemy + LiteLLM)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "BoostRAG Team" }]
license = { text = "MIT" }

dependencies = [
    # ── Web framework ────────────────────────────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "python-multipart>=0.0.10",

    # ── Validation / settings ────────────────────────────────────────────────
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "email-validator>=2.2.0",

    # ── Database ─────────────────────────────────────────────────────────────
    "sqlalchemy[asyncio]>=2.0.35",
    "alembic>=1.13.3",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",

    # ── Auth ─────────────────────────────────────────────────────────────────
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",          # passlib bcrypt backend compat
    "cryptography>=43.0.1",   # fernet cho encrypt LLM key

    # ── Background jobs / cache ──────────────────────────────────────────────
    "celery[redis]>=5.4.0",
    "redis>=5.0.8",

    # ── HTTP client ──────────────────────────────────────────────────────────
    "httpx>=0.27.2",

    # ── Rate limit ──────────────────────────────────────────────────────────
    "slowapi>=0.1.9",

    # ── Logging ──────────────────────────────────────────────────────────────
    "structlog>=24.4.0",

    # ── File parsing (Phase 2 — preload deps) ────────────────────────────────
    "python-magic>=0.4.27",
    "python-magic-bin>=0.4.14; sys_platform == 'win32'",
    "pypdf>=5.0.0",
    "python-docx>=1.1.2",
    "openpyxl>=3.1.5",

    # ── LLM / Vector (Phase 2-3 — preload deps) ──────────────────────────────
    "litellm>=1.48.0",
    "qdrant-client>=1.11.3",
    "minio>=7.2.9",
    "tiktoken>=0.8.0",
    "langdetect>=1.0.9",
    "sentence-transformers>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.9",
    "mypy>=1.11.2",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.2",
    "aiosqlite>=0.20.0",         # test DB
    "asgi-lifespan>=2.1.0",
    "types-passlib>=1.7.7",
    "types-python-jose>=3.3.4",
    "pre-commit>=3.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# ─────────────────────────────────────────────────────────────────────────────
# Ruff
# ─────────────────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "N",             # naming
    "UP",            # pyupgrade
    "B",             # bugbear
    "ASYNC",         # async
    "S",             # bandit
    "C4",            # comprehensions
    "RET",           # return values
    "SIM",           # simplify
    "TC",            # type-checking imports
    "PL",            # pylint subset
    "RUF",           # ruff
]
ignore = [
    "E501",     # line length — handled by formatter
    "B008",     # FastAPI Depends() default
    "PLR0913",  # too many args (FastAPI handlers)
    "S101",     # use of assert (cần trong tests)
    "S104",     # hardcoded 0.0.0.0 (dev only)
    "S105",     # hardcoded password (test fixtures)
    "S106",     # hardcoded password arg (test fixtures)
    "S107",     # hardcoded password default
    "TC001",    # FastAPI/Pydantic cần type runtime
    "TC002",    # FastAPI/SQLAlchemy cần type runtime
    "TC003",    # stdlib type runtime cho Pydantic schemas
    "PLR0911",  # too many returns
    "PLR2004",  # magic value (port numbers, etc.)
    "UP042",    # StrEnum requires py3.11+ (we have it) but SQLAlchemy enum stability with classic Enum chosen
    "PLC0415",  # local import for circular avoidance (rare cases)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PLR2004", "S105", "S106", "S311", "SIM117"]
"app/scripts/**/*.py" = ["T201"]   # CLI scripts can print
"app/rag/ingestion/chunker.py" = ["B023", "SIM113"]
"app/services/document_service.py" = ["S110", "SIM102"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true

# ─────────────────────────────────────────────────────────────────────────────
# Mypy
# ─────────────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.11"
strict = true
files = ["app"]
plugins = ["pydantic.mypy"]

# Less strict outside critical modules
[[tool.mypy.overrides]]
module = ["app.scripts.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["passlib.*", "jose.*", "celery.*", "slowapi.*", "litellm.*", "qdrant_client.*", "minio.*", "magic.*", "langdetect.*", "openpyxl.*", "sentence_transformers.*"]
ignore_missing_imports = true

# ─────────────────────────────────────────────────────────────────────────────
# Pytest
# ─────────────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["app"]
omit = ["app/scripts/*", "alembic/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
